xsm_expl/Stages/8/Frontend/y.output
   0  $accept : start $end

   1  start : TypeDefBlock ClassDefBlock GDeclBlock FDefBlock MainBlock
   2        | TypeDefBlock ClassDefBlock GDeclBlock MainBlock
   3        | TypeDefBlock GDeclBlock MainBlock
   4        | TypeDefBlock GDeclBlock FDefBlock MainBlock
   5        | TypeDefBlock GDeclBlock

   6  TypeDefBlock : TYPE TypeDefList ENDTYPE
   7               |

   8  TypeDefList : TypeDefList TypeDef
   9              | TypeDef

  10  TypeDef : TypeID '{' FieldDeclList '}'

  11  TypeID : ID

  12  FieldDeclList : FieldDeclList FieldDecl
  13                | FieldDecl

  14  FieldDecl : TypeName ID ';'

  15  TypeName : INT
  16           | STR
  17           | ID

  18  ClassDefBlock : CLASS ClassDefList ENDCLASS

  19  ClassDefList : ClassDefList ClassDef
  20               | ClassDef

  21  ClassDef : ClassName '{' ClassMembers MethodDefns '}'

  22  ClassMembers : DECL FieldDeclList MethodDeclList ENDDECL

  23  ClassName : ID
  24            | ID EXTENDS ID

  25  MethodDeclList : MethodDeclList MethodDecl
  26                 | MethodDecl

  27  MethodDecl : TypeName ID '(' ParamList ')' ';'

  28  MethodDefns : FDefBlock

  29  Slist : Slist Stmt ';'
  30        | Stmt ';'

  31  Stmt : inputStmt
  32       | outputStmt
  33       | assignStmt
  34       | ifStmt
  35       | whileStmt
  36       | doWhileStmt
  37       | breakStmt
  38       | continueStmt
  39       | breakPointStmt
  40       | DynamicMemStmt

  41  inputStmt : READ expr

  42  outputStmt : WRITE expr

  43  assignStmt : ID '=' expr
  44             | ID '[' expr ']' '=' expr
  45             | MUL ID '=' expr
  46             | Field '=' expr

  47  retVal : expr

  48  retStmt : RETURN retVal ';'

  49  ifStmt : IF expr THEN Slist ELSE Slist ENDIF
  50         | IF expr THEN Slist ENDIF

  51  whileStmt : WHILE expr DO Slist ENDWHILE

  52  doWhileStmt : DO Slist WHILE expr ENDWHILE

  53  breakStmt : BREAK

  54  continueStmt : CONTINUE

  55  breakPointStmt : BREAKPOINT

  56  GDeclBlock : DECL GDeclList ENDDECL
  57             | DECL ENDDECL

  58  GDeclList : GDeclList GDecl
  59            | GDecl

  60  GDecl : GType GIDList ';'
  61        | GType TupleDecl GIDList ';'

  62  GType : INT
  63        | STR
  64        | ID
  65        | TUPLE ID

  66  GIDList : GIDList ',' GID
  67          | GID

  68  GID : ID
  69      | ID '[' NUM ']'
  70      | ID '(' ParamList ')'
  71      | GPtrID
  72      | GPtrID '(' ParamList ')'

  73  GPtrID : MUL ID

  74  TupleDecl : '(' TupleFieldDeclList ')'

  75  TupleFieldDeclList : TupleFieldDeclList ',' TupleFieldDecl
  76                     | TupleFieldDecl

  77  TupleFieldDecl : TupleFieldType TupleFieldName

  78  TupleFieldType : INT
  79                 | STR

  80  TupleFieldName : ID

  81  ParamList : ParamList ',' Param
  82            | Param
  83            |

  84  Param : ParamType ID

  85  ParamType : INT
  86            | STR
  87            | INT MUL
  88            | STR MUL
  89            | ID

  90  ArgList : ArgList ',' Arg
  91          | Arg
  92          |

  93  Arg : expr

  94  FDefBlock : FDefBlock FDef
  95            | FDef

  96  FID : ID

  97  FDef : FuncSign '{' LDeclBlock FBody '}'

  98  FuncSign : FuncType FID '(' ParamList ')'

  99  FuncType : INT
 100           | STR
 101           | INT MUL
 102           | STR MUL
 103           | ID

 104  FBody : BEGIN_ Slist retStmt END ';'
 105        | BEGIN_ retStmt END ';'

 106  LDeclBlock : DECL LDeclList ENDDECL
 107             | DECL ENDDECL
 108             |

 109  LDeclList : LDeclList LDecl
 110            | LDecl

 111  LDecl : LType LIDList ';'
 112        | LType TupleDecl LIDList ';'

 113  LType : INT
 114        | STR
 115        | ID
 116        | TUPLE ID

 117  LIDList : LIDList ',' LID
 118          | LID

 119  LID : ID
 120      | ID '[' NUM ']'
 121      | MUL ID

 122  MainBlock : MainFunc '(' ')' '{' LDeclBlock MBody '}'

 123  MainFunc : INT MAIN

 124  MBody : BEGIN_ Slist retStmt END ';'

 125  DynamicMemStmt : AllocStmt
 126                 | FreeStmt
 127                 | InitializeStmt
 128                 | NewStmt

 129  AllocStmt : DynaMemID ALLOC '(' ')'

 130  FreeStmt : DynaMemID FREE '(' expr ')'

 131  InitializeStmt : DynaMemID INITIALIZE '(' ')'

 132  NewStmt : DynaMemID NEW '(' ID ')'

 133  DynaMemID : ID '='
 134            | ID '[' expr ']' '='
 135            | Field '='

 136  FieldFunction : Field '(' ArgList ')'

 137  Field : Field '.' ID
 138        | FieldID '.' ID
 139        | SELF '.' ID

 140  FieldID : ID
 141          | ID '[' expr ']'

 142  expr : expr PLUS expr
 143       | expr MINUS expr
 144       | expr MUL expr
 145       | expr DIV expr
 146       | expr MOD expr
 147       | expr EQ expr
 148       | expr NEQ expr
 149       | expr LT expr
 150       | expr LTE expr
 151       | expr GT expr
 152       | expr GTE expr
 153       | expr AND expr
 154       | expr OR expr
 155       | NOT expr
 156       | '(' expr ')'
 157       | Field
 158       | FieldFunction
 159       | ID '(' ArgList ')'
 160       | ID '[' expr ']'
 161       | AMPERSAND ID
 162       | MUL ID
 163       | ID
 164       | NUM
 165       | STRING
 166       | NULL_

state 0
	$accept : . start $end  (0)
	TypeDefBlock : .  (7)

	TYPE  shift 1
	DECL  reduce 7
	CLASS  reduce 7

	start  goto 2
	TypeDefBlock  goto 3


state 1
	TypeDefBlock : TYPE . TypeDefList ENDTYPE  (6)

	ID  shift 4
	.  error

	TypeID  goto 5
	TypeDefList  goto 6
	TypeDef  goto 7


state 2
	$accept : start . $end  (0)

	$end  accept


state 3
	start : TypeDefBlock . ClassDefBlock GDeclBlock FDefBlock MainBlock  (1)
	start : TypeDefBlock . ClassDefBlock GDeclBlock MainBlock  (2)
	start : TypeDefBlock . GDeclBlock MainBlock  (3)
	start : TypeDefBlock . GDeclBlock FDefBlock MainBlock  (4)
	start : TypeDefBlock . GDeclBlock  (5)

	DECL  shift 8
	CLASS  shift 9
	.  error

	ClassDefBlock  goto 10
	GDeclBlock  goto 11


state 4
	TypeID : ID .  (11)

	.  reduce 11


state 5
	TypeDef : TypeID . '{' FieldDeclList '}'  (10)

	'{'  shift 12
	.  error


state 6
	TypeDefBlock : TYPE TypeDefList . ENDTYPE  (6)
	TypeDefList : TypeDefList . TypeDef  (8)

	ID  shift 4
	ENDTYPE  shift 13
	.  error

	TypeID  goto 5
	TypeDef  goto 14


state 7
	TypeDefList : TypeDef .  (9)

	.  reduce 9


state 8
	GDeclBlock : DECL . GDeclList ENDDECL  (56)
	GDeclBlock : DECL . ENDDECL  (57)

	ID  shift 15
	TUPLE  shift 16
	ENDDECL  shift 17
	INT  shift 18
	STR  shift 19
	.  error

	GType  goto 20
	GDeclList  goto 21
	GDecl  goto 22


state 9
	ClassDefBlock : CLASS . ClassDefList ENDCLASS  (18)

	ID  shift 23
	.  error

	ClassDef  goto 24
	ClassName  goto 25
	ClassDefList  goto 26


state 10
	start : TypeDefBlock ClassDefBlock . GDeclBlock FDefBlock MainBlock  (1)
	start : TypeDefBlock ClassDefBlock . GDeclBlock MainBlock  (2)

	DECL  shift 8
	.  error

	GDeclBlock  goto 27


state 11
	start : TypeDefBlock GDeclBlock . MainBlock  (3)
	start : TypeDefBlock GDeclBlock . FDefBlock MainBlock  (4)
	start : TypeDefBlock GDeclBlock .  (5)

	ID  shift 28
	INT  shift 29
	STR  shift 30
	$end  reduce 5

	FDefBlock  goto 31
	MainBlock  goto 32
	FDef  goto 33
	FuncSign  goto 34
	FuncType  goto 35
	MainFunc  goto 36


state 12
	TypeDef : TypeID '{' . FieldDeclList '}'  (10)

	ID  shift 37
	INT  shift 38
	STR  shift 39
	.  error

	TypeName  goto 40
	FieldDecl  goto 41
	FieldDeclList  goto 42


state 13
	TypeDefBlock : TYPE TypeDefList ENDTYPE .  (6)

	.  reduce 6


state 14
	TypeDefList : TypeDefList TypeDef .  (8)

	.  reduce 8


state 15
	GType : ID .  (64)

	.  reduce 64


state 16
	GType : TUPLE . ID  (65)

	ID  shift 43
	.  error


state 17
	GDeclBlock : DECL ENDDECL .  (57)

	.  reduce 57


state 18
	GType : INT .  (62)

	.  reduce 62


state 19
	GType : STR .  (63)

	.  reduce 63


state 20
	GDecl : GType . GIDList ';'  (60)
	GDecl : GType . TupleDecl GIDList ';'  (61)

	ID  shift 44
	MUL  shift 45
	'('  shift 46
	.  error

	GPtrID  goto 47
	TupleDecl  goto 48
	GIDList  goto 49
	GID  goto 50


state 21
	GDeclBlock : DECL GDeclList . ENDDECL  (56)
	GDeclList : GDeclList . GDecl  (58)

	ID  shift 15
	TUPLE  shift 16
	ENDDECL  shift 51
	INT  shift 18
	STR  shift 19
	.  error

	GType  goto 20
	GDecl  goto 52


state 22
	GDeclList : GDecl .  (59)

	.  reduce 59


state 23
	ClassName : ID .  (23)
	ClassName : ID . EXTENDS ID  (24)

	EXTENDS  shift 53
	'{'  reduce 23


state 24
	ClassDefList : ClassDef .  (20)

	.  reduce 20


state 25
	ClassDef : ClassName . '{' ClassMembers MethodDefns '}'  (21)

	'{'  shift 54
	.  error


state 26
	ClassDefBlock : CLASS ClassDefList . ENDCLASS  (18)
	ClassDefList : ClassDefList . ClassDef  (19)

	ID  shift 23
	ENDCLASS  shift 55
	.  error

	ClassDef  goto 56
	ClassName  goto 25


state 27
	start : TypeDefBlock ClassDefBlock GDeclBlock . FDefBlock MainBlock  (1)
	start : TypeDefBlock ClassDefBlock GDeclBlock . MainBlock  (2)

	ID  shift 28
	INT  shift 29
	STR  shift 30
	.  error

	FDefBlock  goto 57
	MainBlock  goto 58
	FDef  goto 33
	FuncSign  goto 34
	FuncType  goto 35
	MainFunc  goto 36


state 28
	FuncType : ID .  (103)

	.  reduce 103


state 29
	FuncType : INT .  (99)
	FuncType : INT . MUL  (101)
	MainFunc : INT . MAIN  (123)

	MAIN  shift 59
	MUL  shift 60
	ID  reduce 99


state 30
	FuncType : STR .  (100)
	FuncType : STR . MUL  (102)

	MUL  shift 61
	ID  reduce 100


state 31
	start : TypeDefBlock GDeclBlock FDefBlock . MainBlock  (4)
	FDefBlock : FDefBlock . FDef  (94)

	ID  shift 28
	INT  shift 29
	STR  shift 30
	.  error

	MainBlock  goto 62
	FDef  goto 63
	FuncSign  goto 34
	FuncType  goto 35
	MainFunc  goto 36


state 32
	start : TypeDefBlock GDeclBlock MainBlock .  (3)

	.  reduce 3


state 33
	FDefBlock : FDef .  (95)

	.  reduce 95


state 34
	FDef : FuncSign . '{' LDeclBlock FBody '}'  (97)

	'{'  shift 64
	.  error


state 35
	FuncSign : FuncType . FID '(' ParamList ')'  (98)

	ID  shift 65
	.  error

	FID  goto 66


state 36
	MainBlock : MainFunc . '(' ')' '{' LDeclBlock MBody '}'  (122)

	'('  shift 67
	.  error


state 37
	TypeName : ID .  (17)

	.  reduce 17


state 38
	TypeName : INT .  (15)

	.  reduce 15


state 39
	TypeName : STR .  (16)

	.  reduce 16


state 40
	FieldDecl : TypeName . ID ';'  (14)

	ID  shift 68
	.  error


state 41
	FieldDeclList : FieldDecl .  (13)

	.  reduce 13


state 42
	TypeDef : TypeID '{' FieldDeclList . '}'  (10)
	FieldDeclList : FieldDeclList . FieldDecl  (12)

	ID  shift 37
	INT  shift 38
	STR  shift 39
	'}'  shift 69
	.  error

	TypeName  goto 40
	FieldDecl  goto 70


state 43
	GType : TUPLE ID .  (65)

	.  reduce 65


state 44
	GID : ID .  (68)
	GID : ID . '[' NUM ']'  (69)
	GID : ID . '(' ParamList ')'  (70)

	'('  shift 71
	'['  shift 72
	','  reduce 68
	';'  reduce 68


state 45
	GPtrID : MUL . ID  (73)

	ID  shift 73
	.  error


state 46
	TupleDecl : '(' . TupleFieldDeclList ')'  (74)

	INT  shift 74
	STR  shift 75
	.  error

	TupleFieldType  goto 76
	TupleFieldDecl  goto 77
	TupleFieldDeclList  goto 78


state 47
	GID : GPtrID .  (71)
	GID : GPtrID . '(' ParamList ')'  (72)

	'('  shift 79
	','  reduce 71
	';'  reduce 71


state 48
	GDecl : GType TupleDecl . GIDList ';'  (61)

	ID  shift 44
	MUL  shift 45
	.  error

	GPtrID  goto 47
	GIDList  goto 80
	GID  goto 50


state 49
	GDecl : GType GIDList . ';'  (60)
	GIDList : GIDList . ',' GID  (66)

	','  shift 81
	';'  shift 82
	.  error


state 50
	GIDList : GID .  (67)

	.  reduce 67


state 51
	GDeclBlock : DECL GDeclList ENDDECL .  (56)

	.  reduce 56


state 52
	GDeclList : GDeclList GDecl .  (58)

	.  reduce 58


state 53
	ClassName : ID EXTENDS . ID  (24)

	ID  shift 83
	.  error


state 54
	ClassDef : ClassName '{' . ClassMembers MethodDefns '}'  (21)

	DECL  shift 84
	.  error

	ClassMembers  goto 85


state 55
	ClassDefBlock : CLASS ClassDefList ENDCLASS .  (18)

	.  reduce 18


state 56
	ClassDefList : ClassDefList ClassDef .  (19)

	.  reduce 19


state 57
	start : TypeDefBlock ClassDefBlock GDeclBlock FDefBlock . MainBlock  (1)
	FDefBlock : FDefBlock . FDef  (94)

	ID  shift 28
	INT  shift 29
	STR  shift 30
	.  error

	MainBlock  goto 86
	FDef  goto 63
	FuncSign  goto 34
	FuncType  goto 35
	MainFunc  goto 36


state 58
	start : TypeDefBlock ClassDefBlock GDeclBlock MainBlock .  (2)

	.  reduce 2


state 59
	MainFunc : INT MAIN .  (123)

	.  reduce 123


state 60
	FuncType : INT MUL .  (101)

	.  reduce 101


state 61
	FuncType : STR MUL .  (102)

	.  reduce 102


state 62
	start : TypeDefBlock GDeclBlock FDefBlock MainBlock .  (4)

	.  reduce 4


state 63
	FDefBlock : FDefBlock FDef .  (94)

	.  reduce 94


state 64
	FDef : FuncSign '{' . LDeclBlock FBody '}'  (97)
	LDeclBlock : .  (108)

	DECL  shift 87
	BEGIN_  reduce 108

	LDeclBlock  goto 88


state 65
	FID : ID .  (96)

	.  reduce 96


state 66
	FuncSign : FuncType FID . '(' ParamList ')'  (98)

	'('  shift 89
	.  error


state 67
	MainBlock : MainFunc '(' . ')' '{' LDeclBlock MBody '}'  (122)

	')'  shift 90
	.  error


state 68
	FieldDecl : TypeName ID . ';'  (14)

	';'  shift 91
	.  error


state 69
	TypeDef : TypeID '{' FieldDeclList '}' .  (10)

	.  reduce 10


state 70
	FieldDeclList : FieldDeclList FieldDecl .  (12)

	.  reduce 12


state 71
	GID : ID '(' . ParamList ')'  (70)
	ParamList : .  (83)

	ID  shift 92
	INT  shift 93
	STR  shift 94
	','  reduce 83
	')'  reduce 83

	ParamList  goto 95
	Param  goto 96
	ParamType  goto 97


state 72
	GID : ID '[' . NUM ']'  (69)

	NUM  shift 98
	.  error


state 73
	GPtrID : MUL ID .  (73)

	.  reduce 73


state 74
	TupleFieldType : INT .  (78)

	.  reduce 78


state 75
	TupleFieldType : STR .  (79)

	.  reduce 79


state 76
	TupleFieldDecl : TupleFieldType . TupleFieldName  (77)

	ID  shift 99
	.  error

	TupleFieldName  goto 100


state 77
	TupleFieldDeclList : TupleFieldDecl .  (76)

	.  reduce 76


state 78
	TupleDecl : '(' TupleFieldDeclList . ')'  (74)
	TupleFieldDeclList : TupleFieldDeclList . ',' TupleFieldDecl  (75)

	','  shift 101
	')'  shift 102
	.  error


state 79
	GID : GPtrID '(' . ParamList ')'  (72)
	ParamList : .  (83)

	ID  shift 92
	INT  shift 93
	STR  shift 94
	','  reduce 83
	')'  reduce 83

	ParamList  goto 103
	Param  goto 96
	ParamType  goto 97


state 80
	GDecl : GType TupleDecl GIDList . ';'  (61)
	GIDList : GIDList . ',' GID  (66)

	','  shift 81
	';'  shift 104
	.  error


state 81
	GIDList : GIDList ',' . GID  (66)

	ID  shift 44
	MUL  shift 45
	.  error

	GPtrID  goto 47
	GID  goto 105


state 82
	GDecl : GType GIDList ';' .  (60)

	.  reduce 60


state 83
	ClassName : ID EXTENDS ID .  (24)

	.  reduce 24


state 84
	ClassMembers : DECL . FieldDeclList MethodDeclList ENDDECL  (22)

	ID  shift 37
	INT  shift 38
	STR  shift 39
	.  error

	TypeName  goto 40
	FieldDecl  goto 41
	FieldDeclList  goto 106


state 85
	ClassDef : ClassName '{' ClassMembers . MethodDefns '}'  (21)

	ID  shift 28
	INT  shift 107
	STR  shift 30
	.  error

	FDefBlock  goto 108
	MethodDefns  goto 109
	FDef  goto 33
	FuncSign  goto 34
	FuncType  goto 35


state 86
	start : TypeDefBlock ClassDefBlock GDeclBlock FDefBlock MainBlock .  (1)

	.  reduce 1


state 87
	LDeclBlock : DECL . LDeclList ENDDECL  (106)
	LDeclBlock : DECL . ENDDECL  (107)

	ID  shift 110
	TUPLE  shift 111
	ENDDECL  shift 112
	INT  shift 113
	STR  shift 114
	.  error

	LType  goto 115
	LDeclList  goto 116
	LDecl  goto 117


state 88
	FDef : FuncSign '{' LDeclBlock . FBody '}'  (97)

	BEGIN_  shift 118
	.  error

	FBody  goto 119


state 89
	FuncSign : FuncType FID '(' . ParamList ')'  (98)
	ParamList : .  (83)

	ID  shift 92
	INT  shift 93
	STR  shift 94
	','  reduce 83
	')'  reduce 83

	ParamList  goto 120
	Param  goto 96
	ParamType  goto 97


state 90
	MainBlock : MainFunc '(' ')' . '{' LDeclBlock MBody '}'  (122)

	'{'  shift 121
	.  error


state 91
	FieldDecl : TypeName ID ';' .  (14)

	.  reduce 14


state 92
	ParamType : ID .  (89)

	.  reduce 89


state 93
	ParamType : INT .  (85)
	ParamType : INT . MUL  (87)

	MUL  shift 122
	ID  reduce 85


state 94
	ParamType : STR .  (86)
	ParamType : STR . MUL  (88)

	MUL  shift 123
	ID  reduce 86


state 95
	GID : ID '(' ParamList . ')'  (70)
	ParamList : ParamList . ',' Param  (81)

	','  shift 124
	')'  shift 125
	.  error


state 96
	ParamList : Param .  (82)

	.  reduce 82


state 97
	Param : ParamType . ID  (84)

	ID  shift 126
	.  error


state 98
	GID : ID '[' NUM . ']'  (69)

	']'  shift 127
	.  error


state 99
	TupleFieldName : ID .  (80)

	.  reduce 80


state 100
	TupleFieldDecl : TupleFieldType TupleFieldName .  (77)

	.  reduce 77


state 101
	TupleFieldDeclList : TupleFieldDeclList ',' . TupleFieldDecl  (75)

	INT  shift 74
	STR  shift 75
	.  error

	TupleFieldType  goto 76
	TupleFieldDecl  goto 128


state 102
	TupleDecl : '(' TupleFieldDeclList ')' .  (74)

	.  reduce 74


state 103
	GID : GPtrID '(' ParamList . ')'  (72)
	ParamList : ParamList . ',' Param  (81)

	','  shift 124
	')'  shift 129
	.  error


state 104
	GDecl : GType TupleDecl GIDList ';' .  (61)

	.  reduce 61


state 105
	GIDList : GIDList ',' GID .  (66)

	.  reduce 66


state 106
	FieldDeclList : FieldDeclList . FieldDecl  (12)
	ClassMembers : DECL FieldDeclList . MethodDeclList ENDDECL  (22)

	ID  shift 37
	INT  shift 38
	STR  shift 39
	.  error

	TypeName  goto 130
	FieldDecl  goto 70
	MethodDeclList  goto 131
	MethodDecl  goto 132


state 107
	FuncType : INT .  (99)
	FuncType : INT . MUL  (101)

	MUL  shift 60
	ID  reduce 99


state 108
	MethodDefns : FDefBlock .  (28)
	FDefBlock : FDefBlock . FDef  (94)

	ID  shift 28
	INT  shift 107
	STR  shift 30
	'}'  reduce 28

	FDef  goto 63
	FuncSign  goto 34
	FuncType  goto 35


state 109
	ClassDef : ClassName '{' ClassMembers MethodDefns . '}'  (21)

	'}'  shift 133
	.  error


state 110
	LType : ID .  (115)

	.  reduce 115


state 111
	LType : TUPLE . ID  (116)

	ID  shift 134
	.  error


state 112
	LDeclBlock : DECL ENDDECL .  (107)

	.  reduce 107


state 113
	LType : INT .  (113)

	.  reduce 113


state 114
	LType : STR .  (114)

	.  reduce 114


state 115
	LDecl : LType . LIDList ';'  (111)
	LDecl : LType . TupleDecl LIDList ';'  (112)

	ID  shift 135
	MUL  shift 136
	'('  shift 46
	.  error

	TupleDecl  goto 137
	LIDList  goto 138
	LID  goto 139


state 116
	LDeclBlock : DECL LDeclList . ENDDECL  (106)
	LDeclList : LDeclList . LDecl  (109)

	ID  shift 110
	TUPLE  shift 111
	ENDDECL  shift 140
	INT  shift 113
	STR  shift 114
	.  error

	LType  goto 115
	LDecl  goto 141


state 117
	LDeclList : LDecl .  (110)

	.  reduce 110


state 118
	FBody : BEGIN_ . Slist retStmt END ';'  (104)
	FBody : BEGIN_ . retStmt END ';'  (105)

	ID  shift 142
	READ  shift 143
	WRITE  shift 144
	MUL  shift 145
	BREAKPOINT  shift 146
	IF  shift 147
	WHILE  shift 148
	DO  shift 149
	BREAK  shift 150
	CONTINUE  shift 151
	RETURN  shift 152
	SELF  shift 153
	.  error

	Slist  goto 154
	Stmt  goto 155
	inputStmt  goto 156
	outputStmt  goto 157
	assignStmt  goto 158
	ifStmt  goto 159
	whileStmt  goto 160
	doWhileStmt  goto 161
	breakStmt  goto 162
	continueStmt  goto 163
	breakPointStmt  goto 164
	retStmt  goto 165
	Field  goto 166
	InitializeStmt  goto 167
	AllocStmt  goto 168
	FreeStmt  goto 169
	DynaMemID  goto 170
	FieldID  goto 171
	NewStmt  goto 172
	DynamicMemStmt  goto 173


state 119
	FDef : FuncSign '{' LDeclBlock FBody . '}'  (97)

	'}'  shift 174
	.  error


state 120
	ParamList : ParamList . ',' Param  (81)
	FuncSign : FuncType FID '(' ParamList . ')'  (98)

	','  shift 124
	')'  shift 175
	.  error


state 121
	MainBlock : MainFunc '(' ')' '{' . LDeclBlock MBody '}'  (122)
	LDeclBlock : .  (108)

	DECL  shift 87
	BEGIN_  reduce 108

	LDeclBlock  goto 176


state 122
	ParamType : INT MUL .  (87)

	.  reduce 87


state 123
	ParamType : STR MUL .  (88)

	.  reduce 88


state 124
	ParamList : ParamList ',' . Param  (81)

	ID  shift 92
	INT  shift 93
	STR  shift 94
	.  error

	Param  goto 177
	ParamType  goto 97


state 125
	GID : ID '(' ParamList ')' .  (70)

	.  reduce 70


state 126
	Param : ParamType ID .  (84)

	.  reduce 84


state 127
	GID : ID '[' NUM ']' .  (69)

	.  reduce 69


state 128
	TupleFieldDeclList : TupleFieldDeclList ',' TupleFieldDecl .  (75)

	.  reduce 75


state 129
	GID : GPtrID '(' ParamList ')' .  (72)

	.  reduce 72


state 130
	FieldDecl : TypeName . ID ';'  (14)
	MethodDecl : TypeName . ID '(' ParamList ')' ';'  (27)

	ID  shift 178
	.  error


state 131
	ClassMembers : DECL FieldDeclList MethodDeclList . ENDDECL  (22)
	MethodDeclList : MethodDeclList . MethodDecl  (25)

	ID  shift 37
	ENDDECL  shift 179
	INT  shift 38
	STR  shift 39
	.  error

	TypeName  goto 180
	MethodDecl  goto 181


state 132
	MethodDeclList : MethodDecl .  (26)

	.  reduce 26


state 133
	ClassDef : ClassName '{' ClassMembers MethodDefns '}' .  (21)

	.  reduce 21


state 134
	LType : TUPLE ID .  (116)

	.  reduce 116


state 135
	LID : ID .  (119)
	LID : ID . '[' NUM ']'  (120)

	'['  shift 182
	','  reduce 119
	';'  reduce 119


state 136
	LID : MUL . ID  (121)

	ID  shift 183
	.  error


state 137
	LDecl : LType TupleDecl . LIDList ';'  (112)

	ID  shift 135
	MUL  shift 136
	.  error

	LIDList  goto 184
	LID  goto 139


state 138
	LDecl : LType LIDList . ';'  (111)
	LIDList : LIDList . ',' LID  (117)

	','  shift 185
	';'  shift 186
	.  error


state 139
	LIDList : LID .  (118)

	.  reduce 118


state 140
	LDeclBlock : DECL LDeclList ENDDECL .  (106)

	.  reduce 106


state 141
	LDeclList : LDeclList LDecl .  (109)

	.  reduce 109


state 142
	assignStmt : ID . '=' expr  (43)
	assignStmt : ID . '[' expr ']' '=' expr  (44)
	DynaMemID : ID . '='  (133)
	DynaMemID : ID . '[' expr ']' '='  (134)
	FieldID : ID .  (140)
	FieldID : ID . '[' expr ']'  (141)

	'='  shift 187
	'['  shift 188
	'.'  reduce 140


state 143
	inputStmt : READ . expr  (41)

	ID  shift 189
	NUM  shift 190
	STRING  shift 191
	NULL_  shift 192
	MUL  shift 193
	AMPERSAND  shift 194
	NOT  shift 195
	SELF  shift 153
	'('  shift 196
	.  error

	expr  goto 197
	Field  goto 198
	FieldID  goto 171
	FieldFunction  goto 199


state 144
	outputStmt : WRITE . expr  (42)

	ID  shift 189
	NUM  shift 190
	STRING  shift 191
	NULL_  shift 192
	MUL  shift 193
	AMPERSAND  shift 194
	NOT  shift 195
	SELF  shift 153
	'('  shift 196
	.  error

	expr  goto 200
	Field  goto 198
	FieldID  goto 171
	FieldFunction  goto 199


state 145
	assignStmt : MUL . ID '=' expr  (45)

	ID  shift 201
	.  error


state 146
	breakPointStmt : BREAKPOINT .  (55)

	.  reduce 55


state 147
	ifStmt : IF . expr THEN Slist ELSE Slist ENDIF  (49)
	ifStmt : IF . expr THEN Slist ENDIF  (50)

	ID  shift 189
	NUM  shift 190
	STRING  shift 191
	NULL_  shift 192
	MUL  shift 193
	AMPERSAND  shift 194
	NOT  shift 195
	SELF  shift 153
	'('  shift 196
	.  error

	expr  goto 202
	Field  goto 198
	FieldID  goto 171
	FieldFunction  goto 199


state 148
	whileStmt : WHILE . expr DO Slist ENDWHILE  (51)

	ID  shift 189
	NUM  shift 190
	STRING  shift 191
	NULL_  shift 192
	MUL  shift 193
	AMPERSAND  shift 194
	NOT  shift 195
	SELF  shift 153
	'('  shift 196
	.  error

	expr  goto 203
	Field  goto 198
	FieldID  goto 171
	FieldFunction  goto 199


state 149
	doWhileStmt : DO . Slist WHILE expr ENDWHILE  (52)

	ID  shift 142
	READ  shift 143
	WRITE  shift 144
	MUL  shift 145
	BREAKPOINT  shift 146
	IF  shift 147
	WHILE  shift 148
	DO  shift 149
	BREAK  shift 150
	CONTINUE  shift 151
	SELF  shift 153
	.  error

	Slist  goto 204
	Stmt  goto 155
	inputStmt  goto 156
	outputStmt  goto 157
	assignStmt  goto 158
	ifStmt  goto 159
	whileStmt  goto 160
	doWhileStmt  goto 161
	breakStmt  goto 162
	continueStmt  goto 163
	breakPointStmt  goto 164
	Field  goto 166
	InitializeStmt  goto 167
	AllocStmt  goto 168
	FreeStmt  goto 169
	DynaMemID  goto 170
	FieldID  goto 171
	NewStmt  goto 172
	DynamicMemStmt  goto 173


state 150
	breakStmt : BREAK .  (53)

	.  reduce 53


state 151
	continueStmt : CONTINUE .  (54)

	.  reduce 54


state 152
	retStmt : RETURN . retVal ';'  (48)

	ID  shift 189
	NUM  shift 190
	STRING  shift 191
	NULL_  shift 192
	MUL  shift 193
	AMPERSAND  shift 194
	NOT  shift 195
	SELF  shift 153
	'('  shift 196
	.  error

	expr  goto 205
	retVal  goto 206
	Field  goto 198
	FieldID  goto 171
	FieldFunction  goto 199


state 153
	Field : SELF . '.' ID  (139)

	'.'  shift 207
	.  error


state 154
	Slist : Slist . Stmt ';'  (29)
	FBody : BEGIN_ Slist . retStmt END ';'  (104)

	ID  shift 142
	READ  shift 143
	WRITE  shift 144
	MUL  shift 145
	BREAKPOINT  shift 146
	IF  shift 147
	WHILE  shift 148
	DO  shift 149
	BREAK  shift 150
	CONTINUE  shift 151
	RETURN  shift 152
	SELF  shift 153
	.  error

	Stmt  goto 208
	inputStmt  goto 156
	outputStmt  goto 157
	assignStmt  goto 158
	ifStmt  goto 159
	whileStmt  goto 160
	doWhileStmt  goto 161
	breakStmt  goto 162
	continueStmt  goto 163
	breakPointStmt  goto 164
	retStmt  goto 209
	Field  goto 166
	InitializeStmt  goto 167
	AllocStmt  goto 168
	FreeStmt  goto 169
	DynaMemID  goto 170
	FieldID  goto 171
	NewStmt  goto 172
	DynamicMemStmt  goto 173


state 155
	Slist : Stmt . ';'  (30)

	';'  shift 210
	.  error


state 156
	Stmt : inputStmt .  (31)

	.  reduce 31


state 157
	Stmt : outputStmt .  (32)

	.  reduce 32


state 158
	Stmt : assignStmt .  (33)

	.  reduce 33


state 159
	Stmt : ifStmt .  (34)

	.  reduce 34


state 160
	Stmt : whileStmt .  (35)

	.  reduce 35


state 161
	Stmt : doWhileStmt .  (36)

	.  reduce 36


state 162
	Stmt : breakStmt .  (37)

	.  reduce 37


state 163
	Stmt : continueStmt .  (38)

	.  reduce 38


state 164
	Stmt : breakPointStmt .  (39)

	.  reduce 39


state 165
	FBody : BEGIN_ retStmt . END ';'  (105)

	END  shift 211
	.  error


state 166
	assignStmt : Field . '=' expr  (46)
	DynaMemID : Field . '='  (135)
	Field : Field . '.' ID  (137)

	'='  shift 212
	'.'  shift 213
	.  error


state 167
	DynamicMemStmt : InitializeStmt .  (127)

	.  reduce 127


state 168
	DynamicMemStmt : AllocStmt .  (125)

	.  reduce 125


state 169
	DynamicMemStmt : FreeStmt .  (126)

	.  reduce 126

